# -2-

./: FIXES_SUMMARY.md  compile_error.txt  main.py  pyproject.toml  requirements.txt  test_flet_v.py
.github/workflows/: build.yml
src/: main.py
